src/objects/Stock_Item__c.object
<CustomObject>
    <fields>
        <fullName>Available_Quantity__c</fullName>
        <label>Available Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bar_Code__c</fullName>
        <label>Bar Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dispatched_Quantity__c</fullName>
        <label>Dispatched Quantity</label>
        <summarizedField>Dispatched_Item__c.Quantity__c</summarizedField>
        <summaryForeignKey>Dispatched_Item__c.Stock_Item__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Invoice IT Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Stock Items</relationshipLabel>
        <relationshipName>Stock_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Received_Quantity__c</fullName>
        <label>Received Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stock_Entry_Date__c</fullName>
        <label>Stock Entry Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Stock_Reference__c</fullName>
        <externalId>true</externalId>
        <label>Stock Reference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Stock Item</label>
    <nameField>
        <label>Stock Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stock Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>